Updated vagrant file with more dependencies

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "ac-koa": "^0.2.6",
-    "ac-koa-hipchat": "^0.2.14"
+    "ac-koa-hipchat": "^0.2.14",
+    "bunyan":"^1.0.0",
+    
   }
 }
