Fixed issue where if an exact card match is found, return that one.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "ac-koa-hipchat": "^0.2.14",
         "bunyan": "^1.0.0",
         "handlebars": "^2.0.0",
-        "rest":"^1.2.0"
+        "rest":"^1.2.0",
+        "underscore":"^1.7.0"
     }
 }
